--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -2,10 +2,10 @@
   text-align: center;
   width: 440px;
   height: max-content;
-  margin: 0 auto;
+  margin: 16px auto;
   display: flex;
   align-items: center;
   justify-content: center;
-  border: 1px solid gray;
+  /* border: 1px solid gray; */
   box-sizing: border-box;
 }
