--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -4,6 +4,7 @@
   height: max-content;
   margin: 16px auto;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   /* border: 1px solid gray; */
