--- a/src/components/RegisterPage/RegisterPage.css
+++ b/src/components/RegisterPage/RegisterPage.css
@@ -1,4 +1,4 @@
-.loginPage {
+.registerPage {
   width: 408px;
   height: max-content;
   display: flex;
@@ -9,7 +9,7 @@
   border-radius: 16px;
 }
 
-.loginPage__greetings {
+.registerPage__greetings {
   width: 100%;
   height: 29px;
   margin: 16px 0 40px;
@@ -20,13 +20,13 @@
   color: rgba(10, 7, 23, 1);
 }
 
-.loginPage__inputsWrapper {
+.registerPage__inputsWrapper {
   padding: 0;
   margin: 0 0;
   border: none;
 }
 
-.loginPage__inputModule {
+.registerPage__inputModule {
   width: 100%;
   min-height: 100px;
   margin: 0 0 30px;
@@ -34,7 +34,7 @@
   flex-direction: column;
 }
 
-.loginPage__label {
+.registerPage__label {
   width: 100%;
   min-height: 12px;
   margin: 0 0;
@@ -42,9 +42,10 @@
   font-weight: 400;
   font-size: 20px;
   line-height: 24px;
+  /* text-align: start; */
 }
 
-.loginPage__input {
+.registerPage__input {
   width: 100%;
   height: 46px;
   padding: 15px;
@@ -62,11 +63,11 @@
   outline: none;
 }
 
-.loginPage__errorSpan {
+.registerPage__errorSpan {
   color: rgba(139, 48, 55, 0.96);
 }
 
-.loginPage__submitButton {
+.registerPage__submitButton {
   width: 40%;
   height: 45px;
   padding: 0;
@@ -83,16 +84,16 @@
   box-sizing: border-box;
 }
 
-.loginPage__submitButton:hover {
+.registerPage__submitButton:hover {
   background-color: #558199;
 }
 
-.loginPage__signinWrapper {
+.registerPage__signinWrapper {
   width: fit-content;
   margin-bottom: 16px;
 }
 
-.loginPage__text {
+.registerPage__text {
   width: fit-content;
   height: 17px;
   margin: 0;
@@ -103,7 +104,7 @@
   color: #A0A0A0;
 }
 
-.loginPage__link {
+.registerPage__link {
   width: fit-content;
   text-decoration: none;
   height: 17px;
@@ -115,6 +116,6 @@
   color: #447C9B;
 }
 
-.loginPage__link:hover {
+.registerPage__link:hover {
   color: #558199;
 }
