--- a/src/components/HomePage/HomePage.scss
+++ b/src/components/HomePage/HomePage.scss
@@ -1,10 +1,10 @@
+@import '../../utils/vars';
+
 .homepage {
+  @include flexible-center;
   width: 440px;
   height: max-content;
-  display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
 }
 
 .homepage__learnToday {
@@ -22,6 +22,6 @@
   font-size: 24px;
   line-height: 29px;
   border-radius: 16px;
-  background-color: #D9D9D9;
+  background-color: $primary-color;
   box-sizing: border-box;
 }
