--- a/src/components/HomePageLessons/HomePageLessons.scss
+++ b/src/components/HomePageLessons/HomePageLessons.scss
@@ -1,24 +1,20 @@
+@use '../../utils/vars';
+
 .homePageLessons__container {
+  @include vars.flexible(column, center);
   width: 408px;
   min-height: 107px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  /* justify-content: center; */
   border-radius: 16px;
-  background-color: #D9D9D9;
+  background-color: vars.$primary-color;
   box-sizing: border-box;
 }
 
 .homePageLessons__title {
+  @include vars.font(20px, 24px);
   margin: 16px auto auto auto;
   width: 100%;
-  padding-left: 10px;
+  padding-left: 16px;
   text-align: start;
-  font-family: "inter";
-  font-weight: 400;
-  font-size: 20px;
-  line-height: 24px;
   box-sizing: border-box;
 }
 
@@ -31,5 +27,4 @@
   grid-template-rows: auto;
   grid-gap: 10px;
   list-style-type: none;
-
 }
