--- a/src/components/HomePageLessonsCard/HomePageLessonsCard.scss
+++ b/src/components/HomePageLessonsCard/HomePageLessonsCard.scss
@@ -1,14 +1,14 @@
+@use '../../utils/vars';
+
 .homePageLessonsCard__container {
+  @include vars.flexible(column, flex-start);
   width: 170px;
   height: 170px;
   padding: 16px;
   border-radius: 16px;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
   justify-content: center;
   box-sizing: border-box;
-  background-color: #447C9B;
+  background-color: vars.$secondary-color;
 }
 
 .homePageLessonsCard__image {
@@ -17,20 +17,17 @@
   border-radius: 50%;
   overflow: hidden;
   object-fit: cover;
-  background-color: #D9D9D9;
+  background-color: vars.$primary-color;
 }
 
 .homePageLessonsCard__title {
+  @include vars.font(14px, 17px);
   width: 100%;
   height: 17px;
   margin: 10px 0;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
-  font-family: "inter";
-  font-weight: 400;
   text-align: start;
-  font-size: 14px;
-  line-height: 17px;
-  color: #fff;
+  color: vars.$text-color-white;
 }
